--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,10 @@ dagger = "2.51"
 viewModel = "2.8.1"
 fragmentKtx = "1.7.1"
 cicerone = "7.1"
+retrofit = "2.10.0"
+gson = "2.9.0"
+logging = "4.12.0"
+scalars = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +36,10 @@ com-google-dagger-compiler = { group = "com.google.dagger", name = "dagger-compi
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "viewModel" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 com-github-terrakok-cicerone = { group = "com.github.terrakok", name = "cicerone", version.ref = "cicerone" }
+com-squareup-retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+com-squareup-retrofit2-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gson" }
+com-squareup-okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "logging" }
+com-squareup-retrofit2-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "scalars" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
