--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ retrofit = "2.10.0"
 gson = "2.9.0"
 logging = "4.12.0"
 scalars = "2.1.0"
+crypto = "1.0.0-alpha02"
+flexbox = "0.3.0-alpha3"
+swipeRefreshLaout = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +43,8 @@ com-squareup-retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", 
 com-squareup-retrofit2-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gson" }
 com-squareup-okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "logging" }
 com-squareup-retrofit2-scalars = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "scalars" }
+androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "crypto" }
+androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swipeRefreshLaout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
